# nv-kernel-benchmarks

./: .gitignore  CMakeLists.txt  README.md  autotune_2d.py  gemm.cu  profile_kernels_csv.sh  run_kernels.sh  scratch.txt
src/: kernels.cuh  runner.cu  runner.cuh  util.cu  util.cuh
src/kernels/: 1D_blocktiling.cuh  2D_blocktiling.cuh  2D_blocktiling_generic.cuh  cublas.cuh  global_mem.cuh  simple_gemm.cuh  vectorized_generic.cuh  vectorized_mem.cuh
